feat: second try to use api in jsDOM[true]

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <h2> Here we'll be testing api's </h2>
     <article> Every test needs to be tested locally </article>
-W    <script src="./asserts/engine.js"></script>
+    <div id='cardConteiner'></div>
+    <script src="./asserts/engine.js"></script>
 </body>
 </html> 
